--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-react-helmet": "^3.2.5",
     "gatsby-plugin-sharp": "^2.5.7",
     "gatsby-plugin-styled-components": "^3.2.4",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-datocms": "^2.2.1",
     "gatsby-source-filesystem": "^2.2.5",
     "gatsby-transformer-sharp": "^2.4.7",
