--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-mdx": "^1.2.6",
     "gatsby-plugin-offline": "^3.1.5",
     "gatsby-plugin-react-helmet": "^3.2.5",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.5.7",
     "gatsby-plugin-styled-components": "^3.2.4",
     "gatsby-plugin-web-font-loader": "^1.0.4",
