--- a/package.json
+++ b/package.json
@@ -5,21 +5,22 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.6",
-    "@mdx-js/react": "^1.6.6",
+    "@mdx-js/mdx": "^1.6.21",
+    "@mdx-js/react": "^1.6.21",
     "babel-plugin-styled-components": "^1.10.7",
     "dotenv": "^8.2.0",
     "gatsby": "^2.24.2",
     "gatsby-image": "^2.4.13",
     "gatsby-plugin-layout": "^1.3.10",
     "gatsby-plugin-manifest": "^2.4.18",
-    "gatsby-plugin-mdx": "^1.2.25",
+    "gatsby-plugin-mdx": "^1.5.0",
     "gatsby-plugin-offline": "^3.2.17",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.6.19",
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-remark-images": "^3.6.0",
     "gatsby-source-datocms": "^2.3.0",
     "gatsby-source-filesystem": "^2.3.19",
     "gatsby-transformer-sharp": "^2.5.11",
